# fast-api-todo-list

./: .env  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/modules/auth/: schema.py
app/modules/core/: config.py  database.py  model.py  repository.py  security.py
app/modules/file/: model.py  schema.py
app/modules/page/: model.py  schema.py
app/modules/role/: model.py  schema.py
app/modules/seo/: model.py  schema.py
app/modules/site_settings/: model.py  schema.py
app/modules/user/: model.py  repository.py  schema.py
