[project]
name = "fast-api-todo-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib==5.1.0",
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "click==8.3.1",
    "cryptography==46.0.5",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi-cli==0.0.21",
    "fastapi-cloud-cli==0.11.0",
    "fastapi[standard]==0.129.0",
    "fastar==0.8.0",
    "greenlet==3.3.1",
    "gunicorn==25.0.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "packaging==26.0",
    "passlib[bcrypt]==1.7.4",
    "pluggy==1.6.0",
    "pyasn1==0.6.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.22",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "rich==14.3.2",
    "rich-toolkit==0.19.4",
    "rignore==0.7.6",
    "rsa==4.9.1",
    "sentry-sdk==2.52.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sqlalchemy>=2.0.46",
    "starlette==0.52.1",
    "typer==0.23.0",
    "types-passlib==1.7.7.20260211",
    "types-pyasn1==0.6.0.20250914",
    "types-python-jose==3.5.0.20250531",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.16",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
